@@ -2,8 +2,8 @@ package io.quarkus.deployment.jvm;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
-import java.util.TreeSet;
 import java.util.jar.Attributes;
 
 import org.jboss.logging.Logger;
@@ -11,6 +11,7 @@ import org.jboss.logging.Logger;
 import io.quarkus.builder.BuildException;
 import io.quarkus.builder.item.SimpleBuildItem;
 import io.quarkus.deployment.builditem.ModuleEnableNativeAccessBuildItem;
+import io.quarkus.deployment.builditem.ModuleExportBuildItem;
 import io.quarkus.deployment.builditem.ModuleOpenBuildItem;
 
 /**
@@ -24,14 +25,23 @@ import io.quarkus.deployment.builditem.ModuleOpenBuildItem;
 public final class ResolvedJVMRequirements extends SimpleBuildItem {
 
     private static final Attributes.Name ADD_OPENS_JARATTRIBUTENAME = new Attributes.Name("Add-Opens");
+    private static final Attributes.Name ADD_EXPORTS_JARATTRIBUTENAME = new Attributes.Name("Add-Exports");
     private static final Attributes.Name ENABLE_NATIVE_JARATTRIBUTENAME = new Attributes.Name("Enable-Native-Access");
 
     private final List<ModuleOpenBuildItem> addOpens;
+    private final List<ModuleExportBuildItem> addExports;
     private final List<ModuleEnableNativeAccessBuildItem> enableNativeAccesses;
 
     public ResolvedJVMRequirements(final List<ModuleOpenBuildItem> addOpens,
             List<ModuleEnableNativeAccessBuildItem> enableNativeAccesses) throws BuildException {
+        this(addOpens, List.of(), enableNativeAccesses);
+    }
+
+    public ResolvedJVMRequirements(final List<ModuleOpenBuildItem> addOpens,
+            final List<ModuleExportBuildItem> addExports,
+            final List<ModuleEnableNativeAccessBuildItem> enableNativeAccesses) throws BuildException {
         this.addOpens = addOpens;
+        this.addExports = addExports;
         this.enableNativeAccesses = enableNativeAccesses;
     }
 
@@ -50,6 +60,15 @@ public final class ResolvedJVMRequirements extends SimpleBuildItem {
             }
             attributes.put(ADD_OPENS_JARATTRIBUTENAME, String.join(" ", modulesToAddOpens));
         }
+        final Collection<String> modulesToAddExports = modulePackagesToExport();
+        if (!modulesToAddExports.isEmpty()) {
+            if (attributes.getValue(ADD_EXPORTS_JARATTRIBUTENAME) != null) {
+                Logger.getLogger(ResolvedJVMRequirements.class)
+                        .warn(
+                                "An 'Add-Exports' entry was already defined in your MANIFEST.MF or using the property quarkus.package.jar.manifest.attributes.\"Add-Exports\". Quarkus has overwritten this existing entry.");
+            }
+            attributes.put(ADD_EXPORTS_JARATTRIBUTENAME, String.join(" ", modulesToAddExports));
+        }
         if (!enableNativeAccesses.isEmpty()) {
             attributes.put(ENABLE_NATIVE_JARATTRIBUTENAME, "ALL-UNNAMED");//This is the only supported value for now
         }
@@ -63,9 +82,14 @@ public final class ResolvedJVMRequirements extends SimpleBuildItem {
      * @return the {@code --add-opens} and {@code --enable-native-access} arguments, in a stable order
      */
     public List<String> renderAsJvmArguments() {
-        final List<String> arguments = new ArrayList<>();
-        for (String modulePackage : modulePackagesToOpen()) {
+        final Collection<String> toOpen = modulePackagesToOpen();
+        final Collection<String> toExport = modulePackagesToExport();
+        final List<String> arguments = new ArrayList<>(toOpen.size() + toExport.size() + 1);
+        for (String modulePackage : toOpen) {
             arguments.add("--add-opens=" + modulePackage + "=ALL-UNNAMED");
+        }
+        for (String modulePackage : toExport) {
+            arguments.add("--add-exports=" + modulePackage + "=ALL-UNNAMED");
         }
         if (!enableNativeAccesses.isEmpty()) {
             arguments.add("--enable-native-access=ALL-UNNAMED");
@@ -73,24 +97,51 @@ public final class ResolvedJVMRequirements extends SimpleBuildItem {
         return arguments;
     }
 
-    private Collection<String> modulePackagesToOpen() {
-        final Collection<String> modulesToAddOpens = new TreeSet<>(); //Choose a TreeSet as it will sort them, providing a stable order for reproducibility
+    private List<String> modulePackagesToOpen() {
+        // a list but we keep it sorted
+        final List<String> modulesToAddOpens = new ArrayList<>(addOpens.size() * 3);
         for (ModuleOpenBuildItem moduleOpenBuildItem : addOpens) {
             for (String packageName : moduleOpenBuildItem.packageNames()) {
                 //When there are multiple packages to be opened within the same module, the whole definition needs to be repeated; e.g.:
                 //Add-Opens: java.base/java.lang java.base/java.util
-                modulesToAddOpens.add(moduleOpenBuildItem.openedModuleName() + '/' + packageName);
+                String str = moduleOpenBuildItem.openedModuleName() + '/' + packageName;
+                int idx = Collections.binarySearch(modulesToAddOpens, str);
+                if (idx < 0) {
+                    modulesToAddOpens.add(-idx - 1, str);
+                }
             }
         }
         return modulesToAddOpens;
     }
 
+    private List<String> modulePackagesToExport() {
+        // a list but we keep it sorted
+        final List<String> modulesToAddExports = new ArrayList<>(addExports.size() * 3);
+        for (ModuleExportBuildItem moduleExportBuildItem : addExports) {
+            for (String packageName : moduleExportBuildItem.packageNames()) {
+                //When there are multiple packages to be exported within the same module, the whole definition needs to be repeated; e.g.:
+                //Add-Exports: java.base/java.lang java.base/java.util
+                String str = moduleExportBuildItem.exportedModuleName() + '/' + packageName;
+                int idx = Collections.binarySearch(modulesToAddExports, str);
+                if (idx < 0) {
+                    modulesToAddExports.add(-idx - 1, str);
+                }
+            }
+        }
+        return modulesToAddExports;
+    }
+
     public void applyJavaModuleConfigurationToRuntime(JvmModulesReconfigurer reconfigurer,
             ClassLoader referenceClassloader) {
-        if (addOpens.isEmpty())
+        if (addOpens.isEmpty() && addExports.isEmpty())
             return;
         ModulesClassloaderContext context = new ModulesClassloaderContext(referenceClassloader);
-        reconfigurer.openJavaModules(addOpens, context);
+        if (!addOpens.isEmpty()) {
+            reconfigurer.openJavaModules(addOpens, context);
+        }
+        if (!addExports.isEmpty()) {
+            reconfigurer.exportJavaModules(addExports, context);
+        }
     }
 
 }
