@@ -8,6 +8,7 @@ import org.junit.jupiter.api.Test;
 
 import io.quarkus.builder.BuildException;
 import io.quarkus.deployment.builditem.ModuleEnableNativeAccessBuildItem;
+import io.quarkus.deployment.builditem.ModuleExportBuildItem;
 import io.quarkus.deployment.builditem.ModuleOpenBuildItem;
 
 public class ResolvedJVMRequirementsTest {
@@ -17,6 +18,7 @@ public class ResolvedJVMRequirementsTest {
         ResolvedJVMRequirements requirements = new ResolvedJVMRequirements(
                 List.of(new ModuleOpenBuildItem("java.base", "org.jboss.threads", "java.lang"),
                         new ModuleOpenBuildItem("java.base", "io.netty.common", "java.nio", "java.io")),
+                List.of(),
                 List.of());
 
         assertThat(requirements.renderAsJvmArguments()).containsExactly(
@@ -26,9 +28,24 @@ public class ResolvedJVMRequirementsTest {
     }
 
     @Test
+    public void addExportsAreRenderedAsJvmArguments() throws BuildException {
+        ResolvedJVMRequirements requirements = new ResolvedJVMRequirements(
+                List.of(),
+                List.of(new ModuleExportBuildItem("java.base", "org.jboss.threads", "java.lang"),
+                        new ModuleExportBuildItem("java.base", "io.netty.common", "java.nio", "java.io")),
+                List.of());
+
+        assertThat(requirements.renderAsJvmArguments()).containsExactly(
+                "--add-exports=java.base/java.io=ALL-UNNAMED",
+                "--add-exports=java.base/java.lang=ALL-UNNAMED",
+                "--add-exports=java.base/java.nio=ALL-UNNAMED");
+    }
+
+    @Test
     public void nativeAccessIsRenderedAsJvmArgument() throws BuildException {
         ResolvedJVMRequirements requirements = new ResolvedJVMRequirements(
                 List.of(new ModuleOpenBuildItem("java.base", "org.jboss.threads", "java.lang")),
+                List.of(),
                 List.of(new ModuleEnableNativeAccessBuildItem("io.netty.common")));
 
         assertThat(requirements.renderAsJvmArguments()).containsExactly(
@@ -38,7 +55,7 @@ public class ResolvedJVMRequirementsTest {
 
     @Test
     public void noRequirementsRenderNoJvmArguments() throws BuildException {
-        ResolvedJVMRequirements requirements = new ResolvedJVMRequirements(List.of(), List.of());
+        ResolvedJVMRequirements requirements = new ResolvedJVMRequirements(List.of(), List.of(), List.of());
 
         assertThat(requirements.renderAsJvmArguments()).isEmpty();
     }
